# pyAMPP

./: .gitignore  CHANGELOG.rst  MANIFEST.in  README.rst  TODAY_2026-02-28_GXBOX_PIPELINE_NOTES.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: conf.py  gui_workflow.rst  gx_fov2box_usage.rst  index.rst  model_hdf5_format.rst  sharp_cli_status.rst  viewers.rst
pyampp/: _version.py  version.py
pyampp/data/: downloader.py
pyampp/gx_chromo/: combo_model.py  decompose.py
pyampp/gxbox/: __init__.py  box.py  boxutils.py  coordinates-los-demo.ipynb  fov_selector_gui.py  gx_box2id.py  gx_fov2box.py  gxampp.py  gxbox_dump_corners.py  gxbox_selector_view.py  gxrefmap_view.py  magfield_viewer.py  map_box_view.py  observer_restore.py  selector_api.py  view_h5.py
pyampp/sharp/: cli.py  drms.py  entry_box.py  example_radio_config.yaml  radio_adapter.py
pyampp/tests/: build_h5_from_sav.py  compare_base_maps.py  compare_gen_chromo.py  compare_idl_hdf5.py  idl_hdf5_mapping.md  idl_parity_notes.md  idl_stage_report_2024-05-12.json  plot_base_maps_comparison.py  plot_h5_sav_component_panel.py  plot_self_consistency.py  run_amp_stages_cli.py  test_combo_model.py  test_fov2box_time_anchor.py  test_gxampp_process_output.py  test_sharp_cli.py
pyampp/util/: build_h5_from_sav.py  compute.py  config.py  gxfov2box_to_idl.py  h5tree.py
