[build-system]
requires = [
    "setuptools>=62.1",
    "wheel",
    "extension-helpers",
    "numpy>=1.25",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyampp"
version = "1.0.0"
description = "Automatic Model Suff"
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
dependencies = ["sunpy[all]",
    "numpy>=1.25",
    "drms",
    "ipympl",
    "ipywidgets",
    "matplotlib",
    "pyvista",
    "pyvistaqt",
    "pyqt5",
    "scipy",
    "pyAMaFiL",
    "typer",
]

[project.scripts]
pyampp = "pyampp.gxbox.gxampp:app"
gxbox-view3d = "pyampp.gxbox.view_h5:main"
gxbox-view2d = "pyampp.gxbox.gxbox_selector_view:main"
gxbox-corners = "pyampp.gxbox.gxbox_dump_corners:main"
gx-fov2box = "pyampp.gxbox.gx_fov2box:app"
gx_fov2box = "pyampp.gxbox.gx_fov2box:app"
h5tree = "pyampp.util.h5tree:app"
gxrefmap-view = "pyampp.gxbox.gxrefmap_view:app"
gx-idl2fov2box = "pyampp.util.idl_execute_to_gxfov2box:main"
gx-fov2box2idl = "pyampp.util.gxfov2box_to_idl:main"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-autoapi",
    "sphinx-rtd-theme",
    "tomli; python_version <\"3.11\"",
]



[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyampp*"]
exclude = ["build*", "docs*", "examples*", "reports*"]

[tool.pytest.ini_options]
testpaths = [
    "pyampp",
    "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
    "pyampp/__init*",
    "pyampp/conftest.py",
    "pyampp/*setup_package*",
    "pyampp/tests/*",
    "pyampp/*/tests/*",
    "pyampp/extern/*",
    "pyampp/version*",
    "*/pyampp/__init*",
    "*/pyampp/conftest.py",
    "*/pyampp/*setup_package*",
    "*/pyampp/tests/*",
    "*/pyampp/*/tests/*",
    "*/pyampp/extern/*",
    "*/pyampp/version*",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about packages we have installed
    "except ImportError",
    # Don't complain if tests don't hit assertions
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain about script hooks
    "def main(.*):",
    # Ignore branches that don't pertain to this version of Python
    "pragma: py{ignore_python_version}",
    # Don't complain about IPython completion helper
    "def _ipython_key_completions_",
]
